Changes to the modals

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div class="startModalContent">
             <img class = "modalImg" src="images/iceAge.png" alt="picture with characters from Ice Age cartoon">
              <!-- photo source www.freepngs.com -->
-            <span>Wellcome to the Ice Age style FROGGER!</span>
-            <p>Please help Scratt cross the stones and reach the Mountain. On his way he must not enter in collision with Sid, Buck or Diego. Achorns can be collected by Scratt, but they are counted only if he reaches the mountain with the achorn.</p>
+            <h2>Wellcome to the Ice Age style FROGGER!</h2>
+            <p>Please help Scratt cross the ice and reach the earth. On his way he must not enter in collision with Sid, Manfred or Diego. Achorns can be collected by Scratt, but they are counted only if he reaches the earth with the achorn.</p>
             <p>You have 3 minutes and 3 lives to collect as many achorns as possible.</p>
-            <p>To move Scratt you have to use the arrow keys.</p>
+            <p>To move Scratt you have to use the arrow keys on the keyboard.</p>
             <button class="play">Play</button>
         </div>
     </section>
     <section class="stopModal">
         <div class="stopModalContent">
             <h2> Game End!</h2>
-            <p> You've lost all your lives and you've helped Scratt to collect <span class="achorn">0</span> achorns.</p>
-            <button class="close">Restart the game</button>
+            <p> You've helped Scratt collect <span class="achorn">0</span> achorn(s).</p>
+            <button class="close">Play again</button>
         </div>
     </section>
     <section class="score-panel">
@@ -34,7 +34,7 @@
         </div>
 
         <span class="achorn">0 </span> achorns
-        <span class="time">0m 0s</span>
+        <span class="time">3m 0s</span>
 
         <div class="restart">
             <i class="fa fa-repeat"></i>
